User input processing and validation

--- a/app/src/main/res/layout/compass_fragment.xml
+++ b/app/src/main/res/layout/compass_fragment.xml
@@ -46,12 +46,15 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/compass"
-            app:layout_constraintVertical_weight="1">
+            app:layout_constraintVertical_weight="1"
+            app:errorEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="numberDecimal"/>
+                android:inputType="numberSigned|numberDecimal"
+                android:onTextChanged="@{compassViewModel::onLatitudeChanged}"
+                app:latError="@{compassViewModel.isLatitudeValid}"/>
         </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -69,7 +72,9 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="numberDecimal"/>
+                android:inputType="numberSigned|numberDecimal"
+                android:onTextChanged="@{compassViewModel::onLongitudeChanged}"
+                app:longError="@{compassViewModel.isLongitudeValid}"/>/>
         </com.google.android.material.textfield.TextInputLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
