--- a/app/src/main/res/layout/compass_fragment.xml
+++ b/app/src/main/res/layout/compass_fragment.xml
@@ -25,7 +25,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_weight="7"
             app:setAngle="@{compassViewModel.azimuth}"
-            app:showDestinationBearing= "@{compassViewModel.showDestination}"/>
+            app:showDestinationBearing= "@{compassViewModel.showDestination}"
+            app:setDestinationBearing= "@{compassViewModel.destinationBearing}"/>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/latitudeInput"
